[package]
name = "alltracks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.16", features = ["derive"]}
anyhow = "1.0.86"
rspotify = {version = "0.13.2", features = ["cli", "env-file"]}
tokio = {version = "1.39.3", features = ["full"]}
url = "2.5.2"
